[package]
name = "ebay"
version = "0.2.0"
authors = ["fluxxu <fluxxu@gmail.com>"]
description = "eBay API client for Rust."
license = "MIT"

[dependencies]
chrono = { version = "0.4.0", features = ["serde"] }
reqwest = "0.8.2"
url = "1.6.0"
failure = "0.1.2"
failure_derive = "0.1.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
xmltree = "0.8.0"