[package]
name = "ebay"
version = "0.1.3"
authors = ["fluxxu <fluxxu@gmail.com>"]
description = "eBay API client for Rust."
license = "MIT"

[dependencies]
chrono = { version = "0.4.0", features = ["serde"] }
reqwest = "0.8.2"
url = "1.6.0"
error-chain = "0.11.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"