[package]
name = "ebay"
version = "0.3.0"
authors = ["fluxxu <fluxxu@gmail.com>"]
description = "eBay API client for Rust."
license = "MIT"
edition = "2018"

[dependencies]
ebay_derive = "0.2"
chrono = { version = "0.4.0", features = ["serde"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
url = "1.6.0"
thiserror = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xmltree = "0.8.0"
sha256 = "1.0.3"